k8s/hello-world-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-world
  namespace: tectonic-demo
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: hello-world
        env: production
        version: v1
    spec:
      containers:
      - name: hello-world
        image: quay.io/jordan_cooks/hello-world-demo:latency
        imagePullPolicy: Always
        ports:
        - name: web
          containerPort: 5000
        - name: metrics
          containerPort: 8000
