k8s/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-hello-world
  namespace: tectonic-demo
spec:
  type: LoadBalancer
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    prometheus: hello-world
