k8s/hello-world-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: k8s-apps-ingress
  namespace: tectonic-demo
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: 'true'
    ingress.kubernetes.io/use-port-in-redirects: 'true'
    kubernetes.io/ingress.class: tectonic
spec:
  rules:
    - host: k8s-apps.scottsumner.net
      http:
        paths:
        - path: /hello-world
          backend:
            serviceName: hello-world
            servicePort: 5000
